# openllm-container

./: .copier-docker-config.yaml  .copierignore  .gitignore  .tasks.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.docker/: Dockerfile.app  Dockerfile.base  docker-compose.app.yaml  docker-compose.base.yaml  docker-compose.ui.yaml  docker.app.env  docker.base.env  docker.common.env  docker.version
.docker/.docker-scripts/: docker-compose.sh
.docker/scripts/: init-dotfiles.sh  launch.sh  requirements-base.txt  requirements.txt
.github/workflows/: deploy-app-image.yaml  deploy-base-image.yaml  release.yaml
