[tool.poetry]
name = "openllm"
version = "0.9.1"
description = "Container imags for running OpenLLM models on container platforms."
authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
license = "MIT"
repository = "https://github.com/entelecheia/openllm-container"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.1"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = '.docker/docker.version:APP_VERSION="{version}"'
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
commit_subject = "chore(release): :rocket: {version} [skip ci]"
prerelease_tag = "rc"
major_on_zero = true
tag_commit = true
changelog_file = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
hvcs = "github" # hosting version control system, gitlab is also supported
build_command = "mkdir -p dist && echo 'No build command configured' > dist/release.txt"
